--- a/food.html
+++ b/food.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="logo-container">
-   <a href="home.html" class="logo-link">
+   <a href="index.html" class="logo-link">
         <img src="palmtrees.jpg" class="logo">
    </a>
 </div>
@@ -25,7 +25,7 @@
 
 
     
-    <h1><a href="home.html">Welcome to Taniti!</a></h1>
+    <h1><a href="index.html">Welcome to Taniti!</a></h1>
 
    <div class="nav-container">
         <nav>
