--- a/transportation.html
+++ b/transportation.html
@@ -43,6 +43,13 @@
             Taniti is served by a small airport that can accommodate small jets and propeller planes. 
             Taniti is in the process of expanding the airport so larger jets will be able to land on the island within the next few years. 
          </p>
+         <h2>Ground Transportation</h2>
+         <p>
+            Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. 
+            Private buses serve the rest of the island. Taxis are available in Taniti City, and rental cars can be rented from a local rental agency near the airport. 
+            Bikes and helmets are available to rent from several vendors (helmets are required by law). 
+            Taniti City is fairly flat and very walkable. Many tourists stay in the area surrounding Merriton Landing: this area is easy to explore on foot.
+         </p> 
      </div>
  
      <div class="page-pictures">
